src/assets/style/global.less
@import url('./vars.less');
@import url('./select.less');
@import url('./button.less');
@import url('./tableList.less');
@import url('./dataView.less');
@import url('./editor.less');
@import url('./log.less');
@import url('./form.less');
@import url('./layout.less');
@import url('./vp-doc.less');
@import url('./list.less');
@import url('./docs.less');
@import url('./custom-block.less');

* {
  box-sizing: border-box;
}

:root {
  --main-bg-color: rgba(244, 246, 254, 1);
  --th-bg-color: rgba(248, 249, 253, 1);
  --card-bg-color: rgba(255, 255, 255, 1);
  --hover-bg-color: rgba(255, 255, 255, 0.6);
  --white-font-color: rgba(252, 253, 255, 1);
  --tooltip-font-color: rgba(255, 255, 255, 0.8);
  --navbar-bg-color: linear-gradient(270deg, #1d0e38 0%, #2a115a 100%);
  --brand-color: rgba(131, 34, 255, 1);
  --hover-brand-color: rgba(163, 118, 255, 1);
  --light-brand-color: rgba(163, 118, 255, 0.1);
  --tree-select-brand-color: rgba(163, 118, 255, 0.2);
  --main-font-color: rgba(23, 12, 44, 1);
  --tooltip-bg-color: rgba(23, 12, 44, 0.9);
  --small-font-color: rgba(23, 12, 44, 0.8);
  --hover-font-color: rgba(23, 12, 44, 0.6);
  --font-color-40: rgba(23, 12, 44, 0.4);
  --border-color: rgba(23, 12, 44, 0.2);
  --light-border-color: rgba(23, 12, 44, 0.07);
  --grey-bg-color: rgba(23, 12, 44, 0.04);
  --success-color: rgba(36, 201, 128, 1);
  --success-bg-color: rgba(233, 249, 242, 1);
  --warning-color: rgba(232, 176, 14, 1);
  --warning-bg-color: #fcf7e6;
  --danger-color: rgba(239, 60, 104, 1);
  --danger-bg-color: #fdebef;
  --danger-bg-hover-color: rgba(239, 60, 104, 0.2);
  --switch-unchecked-color: rgba(36, 201, 128, 1);
  --editor-active-line-color: rgba(252, 253, 255, 0.14);
  --box-shadow-color: rgba(0, 0, 0, 0.15);
}

html,
body {
  width: 100%;
  min-width: 780px;
  height: 100%;
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: 12px;
  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'PingFang SC', 'noto sans', sans-serif !important;
  background-color: var(--main-bg-color);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.arco-overlay-message {
  display: flex;
  align-items: center;
  justify-content: center;
}

.arco-message-list {
  max-width: 780px;
}

.arco-message {
  padding: 8px 15px;
  text-align: left;
  border: 1px solid;
  border-radius: 6px;

  .arco-message-content {
    display: -webkit-box;
    overflow: hidden;
    color: var(--main-font-color);
    font-size: 14px;
    line-height: 22px;
    text-overflow: ellipsis;
    -webkit-line-clamp: 3;
    line-clamp: 2;
    -webkit-box-orient: vertical;
  }
}

.arco-message-success {
  background-color: var(--success-bg-color);
  border-color: var(--success-color);
}

.arco-message-error {
  background-color: var(--danger-bg-color);
  border-color: var(--danger-color);
}

.arco-tooltip-content {
  margin-bottom: -5px;
  padding: 8px;
  color: var(--tooltip-font-color);
  font-size: 12px;
  background-color: var(--tooltip-bg-color);
  border-radius: 6px;
}

.arco-trigger-arrow {
  display: none;
}

.arco-dropdown {
  padding: 0;
  border: 0;
  border-radius: 6px;
  box-shadow: 0 2px 10px 0 var(--box-shadow-color);

  .arco-dropdown-option {
    padding: 0;
  }

  .arco-dropdown-option:not(.arco-dropdown-option-disabled):hover {
    background-color: transparent;
  }

  .arco-dropdown-option-content {
    width: 100%;
    height: 32px;
    line-height: 32px;
    border-radius: 6px;
  }

  .arco-link {
    justify-content: flex-start;
    width: 100%;
    height: 100%;
    padding: 0 15px;
    color: var(--small-font-color);
    font-size: 13px;
  }

  .arco-link:hover {
    color: var(--small-font-color);
    background-color: var(--light-brand-color);
  }
}

.pointer {
  cursor: pointer;
}

.pointer:hover {
  opacity: 0.6;
}

.arco-card {
  background: var(--card-bg-color);
  border-radius: 10px;

  .arco-card-body {
    padding: 0;
  }

  .arco-card-header {
    height: 58px;
    padding: 10px 15px;
    border-bottom: 0;
  }

  .arco-card-header-title {
    display: flex;
    align-items: center;
    color: var(--main-font-color);
    font-weight: 600;
    font-size: 16px;
    line-height: 20px;
  }

  .arco-card-header-extra {
    display: flex;
  }
}

.icon {
  width: 14px;
  height: 14px;
}

.icon-15 {
  width: 15px;
  height: 15px;
}

.icon-16 {
  width: 16px;
  height: 16px;
}

.icon-18 {
  width: 18px;
  height: 18px;
}

.icon-20 {
  width: 20px;
  height: 20px;
}

.arco-icon-hover::before {
  width: 0;
}

.arco-icon-hover:hover::before {
  background-color: transparent;
}

.arco-select-dropdown {
  padding: 0;
  border: 0;
  border-radius: 6px;
  box-shadow: 0 2px 10px 0 var(--box-shadow-color);

  .arco-select-option {
    padding: 0 8px;
    color: var(--small-font-color);
    font-size: 13px;
    line-height: 32px;
    text-align: left;
    border-radius: 6px;

    .arco-checkbox-icon {
      width: 12px;
      height: 12px;
      border: 1px solid var(--brand-color);
      border-radius: 2px;
    }

    .arco-checkbox-checked .arco-checkbox-icon {
      background-color: var(--brand-color);
    }

    .arco-checkbox {
      padding-left: 0;
      font-size: 11px;

      .arco-icon-hover {
        width: 12px;
        height: 12px;
      }
    }
  }

  .arco-select-option-active {
    background-color: var(--light-brand-color);
  }

  .arco-select-option:not(.arco-select-dropdown .arco-select-option-disabled):hover {
    background-color: var(--light-brand-color);
  }
}

.arco-menu-horizontal {
  height: 100%;

  .arco-menu-inner {
    padding: 0;
  }

  .arco-menu-selected-label {
    bottom: -9px;
  }
}

.arco-input-wrapper {
  background: var(--grey-bg-color);
  border-radius: 6px;

  .arco-input[disabled] {
    -webkit-text-fill-color: var(--hover-font-color);
  }
}

.arco-input-wrapper:hover {
  background: var(--grey-bg-color);
}

.arco-input-wrapper.arco-input-disabled {
  background: var(--grey-bg-color);
}

.arco-input-wrapper:focus-within,
.arco-input-wrapper.arco-input-focus {
  background: transparent;
  border-color: var(--hover-brand-color);
}

.arco-modal {
  width: 384px;
  background-color: var(--card-bg-color);
  border-radius: 10px;

  .arco-modal-body {
    padding: 10px 20px;
    line-height: 28px;
    text-align: center;
  }

  .arco-modal-header {
    border-bottom: 0;
  }

  .arco-modal-footer {
    padding: 20px;
    border-top: 0;

    .arco-btn {
      width: 100%;
      height: 44px;
    }

    > .arco-btn:not(:nth-child(1)) {
      margin-top: 10px;
      margin-left: 0;
    }
  }
}

.vertical-center {
  position: absolute;
  top: 50%;
  margin: 0;
  transform: translateY(-50%);
}

.arco-popover-content {
  margin-top: 0;
}

.arco-popover-popup-content {
  padding: 6px 16px;
}

.width-35 {
  display: inline-flex;
  width: 35px;
}

:focus {
  outline: none;
}

#app {
  display: flex;
  height: 100vh;
}

@font-face {
  font-weight: 400;
  font-family: 'Open Sans';
  font-style: normal;
  src: local('Open Sans'), url('../fonts/OpenSans-Regular.ttf');
}

@font-face {
  font-weight: 600;
  font-family: 'Open Sans';
  font-style: normal;
  src: local('Open Sans'), url('../fonts/OpenSans-SemiBold.ttf');
}

@font-face {
  font-weight: 800;
  font-family: 'Open Sans';
  font-style: normal;
  src: local('Open Sans'), url('../fonts/OpenSans-ExtraBold.ttf');
}

